# Objectherkenning-Openbare-Ruimte

./: .amlignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  Dockerfile  Dockerfile_with_TLS_error  README.md  config.example.yml  config.json  config.yml  config_databricks.yml  config_db.yml  entrypoint.sh  pyproject.toml  requirements_on_edge.txt  sweep_config.json
cicd/: build-pipeline.yml  deploy-pipeline.yml  main.yml  prebuild-pipeline.yml  prerequisites-pipeline.yml  variables.yaml
cicd/steps/: deploy-pipeline.yml  prebuild-pipeline.yml  prerequisites-pipeline.yml
cicd/templates/: code-quality-security-checks.yml  download-aml-model.yml
notebooks/: annotations_eda.ipynb  data_minimisation.ipynb  dataminimalisation.ipynb  de-fisheye.ipynb  defisheye.py  detections_validation_eda.ipynb  distortion_correction.ipynb  eval.ipynb  evaluate_app_results.ipynb  extract_frames.ipynb  metadata_check.ipynb  model_comparison.ipynb  prepare_manual_run_data.ipynb  sampling.ipynb  yolo_blurring_saving.ipynb  yolo_to_coco.ipynb
objectherkenning_openbare_ruimte/: Mock data generators.py  convert_annotations.py
objectherkenning_openbare_ruimte/convert_annotations_pipeline/: submit_convert_annotations.py
objectherkenning_openbare_ruimte/convert_annotations_pipeline/components/: convert_annotations.py
objectherkenning_openbare_ruimte/convert_annotations_pipeline/source/: yolo_to_azure_coco_converter.py
objectherkenning_openbare_ruimte/convert_dataset_pipeline/: submit_convert_dataset.py
objectherkenning_openbare_ruimte/convert_dataset_pipeline/components/: convert_dataset.py
objectherkenning_openbare_ruimte/convert_dataset_pipeline/source/: equirectangular_to_cubemap_converter.py
objectherkenning_openbare_ruimte/convert_old_dataset/: convert_old_dataset.py
objectherkenning_openbare_ruimte/convert_old_dataset/source/: equirectangular_to_cubemap_converter.py
objectherkenning_openbare_ruimte/create_aml_environment/: Dockerfile  create_azure_env.py  oor-environment.Dockerfile
objectherkenning_openbare_ruimte/cuda_test_pipeline/: submit_cuda_test.py
objectherkenning_openbare_ruimte/cuda_test_pipeline/components/: cuda_test.py
objectherkenning_openbare_ruimte/data_delivery_pipeline/: run_data_delivery_pipeline.py
objectherkenning_openbare_ruimte/data_delivery_pipeline/components/: data_delivery.py  iot_handler.py
objectherkenning_openbare_ruimte/data_minimalisation_pipeline/source/: blurring_tools.py
objectherkenning_openbare_ruimte/data_minimisation/: blurring_tools.py  data_minimisation.py  submit_data_minimisation_experiment_job.py
objectherkenning_openbare_ruimte/data_sampling/: __init__.py  data_sampling.py  decos_helper.py  decos_sampling.py  submit_data_sampling_job.py
objectherkenning_openbare_ruimte/databricks_pipelines/common/: __init__.py  databricks_workspace.py  reference_db_connector.py  table_manager.py  utils.py  utils_arg_parser.py  utils_images.py  utils_signalen.py
objectherkenning_openbare_ruimte/detection_pipeline/: run_detection_pipeline.py
objectherkenning_openbare_ruimte/detection_pipeline/components/: data_detection.py
objectherkenning_openbare_ruimte/frame_extraction/: data_helper.py  frame_extraction.py  metadata_helper.py  submit_frame_extraction_job.py
objectherkenning_openbare_ruimte/inference_pipeline/: submit_inference_pipeline.py
objectherkenning_openbare_ruimte/inference_pipeline/components/: processing_tools.py  run_inference.py
objectherkenning_openbare_ruimte/inference_pipeline/source/: OORInference.py  blurring_tools.py  data_inference.py  input_image.py  model_result.py  output_image.py
objectherkenning_openbare_ruimte/on_edge/: utils.py
objectherkenning_openbare_ruimte/on_edge/data_delivery_pipeline/: run_data_delivery_pipeline.py
objectherkenning_openbare_ruimte/on_edge/detection_pipeline/: run_detection_pipeline.py
objectherkenning_openbare_ruimte/on_edge/model_conversion_pipeline/: run_model_conversion_pipeline.py
objectherkenning_openbare_ruimte/on_edge/performance_monitoring/: run_performance_monitoring.py
objectherkenning_openbare_ruimte/performance_evaluation_pipeline/: submit_evaluation_pipeline.py
objectherkenning_openbare_ruimte/performance_monitoring/: run_performance_monitoring.py
objectherkenning_openbare_ruimte/post_processing_pipeline/: 01_ingest_metadata.py  02_run_metadata_healthcheck.py  03_data_enrichment.py  04_submit_to_signalen.py  bag_addresses.py  check_melding_status.py  check_permits.py  check_signalen.py  config.yaml  data_enrichment.py  databricks_workspace.py  dummy_printer.py  example_usage.py  ingest_metadata.py  reference_db_connector.py  run_clustering.py  submit_to_signalen.py  utils_signalen.py
objectherkenning_openbare_ruimte/preprocessing_service/: preprocess_video_to_frames.sh
objectherkenning_openbare_ruimte/settings/: databricks_jobs_settings.py  luna_logging.py  settings.py  settings_schema.py
objectherkenning_openbare_ruimte/signalen_feedback_pipeline/: 01_update_signalen_feedback.py
objectherkenning_openbare_ruimte/sweep_pipeline/: submit_sweep_pipeline.py
objectherkenning_openbare_ruimte/training_pipeline/: submit_training_pipeline.py
objectherkenning_openbare_ruimte/utils/: convert_annotations.py  convert_dataset.py  convert_images.py
scripts/containers_detected_map/: containers_detected_map_generator.py  main.py
scripts/runs_comparison/: compare_runs.py  compare_runs_notebook.ipynb
scripts/tracking_evaluation/: tracking_bytetrack.py  tracking_comparison.ipynb  tracking_deepsort.py  tracking_evaluator.ipynb
scripts/validate_detections/: validate_detections.py
tests/: fake_test.py  test_fake.py  test_logger.py
tests/databricks_pipelines/: test_is_container_permit.py  test_queries_equivalence.py  test_utils.py
(+73 files in other folders)
