[tool.poetry]
name = "objectherkenning_openbare_ruimte"
version = "0.1.3"
description = "Objectherkenning Openbare Ruimte is a project about recognising objects from public space images."
authors = [
    "Sebastian Davrieux <s.davrieux@amsterdam.nl>",
    "Diana Epureanu <d.epureanu@amsterdam.nl>",
    "Andrea Lombardo <a.lombardo@amsterdam.nl>",
    "Daan Bloembergen <d.bloembergen@amsterdam.nl>"
]

[tool.poetry.dependencies]
python = "~3.8"
azure-iot-device = {version = "^2.13.0", source = "PyPI"}
azure-storage-blob = {version = "^12.19.0", source = "PyPI"}
cvtoolkit = { git = "https://github.com/Computer-Vision-Team-Amsterdam/CVToolkit.git",  tag = "v2.0.0" }
mldesigner = {version = "^0.1.0-beta.9", source = "PyPI"}
numpy = {version = "^1.24.2", source = "PyPI"}
opencv-python = {version = "^4.8.0.74", source = "PyPI"}
pandas = {version = "^2.0.3", source = "PyPI"}
pathvalidate = {version = "^3.2.0", source = "PyPI"}
pre-commit = {version = "^3.2.0", source = "PyPI"}
py360convert-modified = {version = "^1.0.1", source = "PyPI"}
pydantic = {version = "^1.8.2", source = "PyPI"}
torch = {version = "2.2.2", source = "PyPI"}
ultralytics = {version = "^8.2.2", source = "PyPI"}

[tool.poetry.dev-dependencies]
aml_interface = { git = "https://github.com/Computer-Vision-Team-Amsterdam/AML-Interface.git",  tag = "v1.1.0" }
azure-ai-ml = {version = "^1.2.0", source = "PyPI"}
geopandas = {version = "~0.13.2", source = "PyPI"}
pytest = {version = "^7.0.1", source = "PyPI" }
pytest-cov = {version = "^4.0.0", source = "PyPI" }

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
