[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "objectherkenning_openbare_ruimte"
version = "2.2.7"
description = "Objectherkenning Openbare Ruimte is a project about recognising objects from public space images."
authors = [
    {name = "Sebastian Davrieux", email = "s.davrieux@amsterdam.nl"},
    {name = "Diana Epureanu", email = "d.epureanu@amsterdam.nl"},
    {name = "Andrea Lombardo", email = "a.lombardo@amsterdam.nl"},
    {name = "Daan Bloembergen", email = "d.bloembergen@amsterdam.nl"},
    {name = "Niek IJzerman", email = "n.ijzerman@amsterdam.nl"},
]
maintainers = [
    { name = "Computer Vision Team, Gemeente Amsterdam", email = "cvt@amsterdam.nl" },
]
readme = "README.md"
requires-python = ">=3.8, <=3.12"
dependencies = [
    "yolo_model_development_kit",
    "pathvalidate>=3.2.0",
    "py360convert-modified>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.4",
    "folium>=0.17.0",
    "geopandas>=0.13.2",
    "matplotlib>=3.9.0",
    "mapclassify>=2.8.1",
    "nbstripout>=0.7.1",
    "pandas-stubs==2.0.*",
    "pre-commit>=3.2.0",
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
    "safety>=3.2.4",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
yolo_model_development_kit = { git = "https://github.com/Computer-Vision-Team-Amsterdam/YOLO-model-development-kit.git", tag = "v1.4.6" }

[tool.setuptools.packages.find]
include=["objectherkenning_openbare_ruimte", "objectherkenning_openbare_ruimte.*"]

[tool.isort]
profile = "black"
multi_line_output = 3
